fixed z-index in about page

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -483,7 +483,7 @@ body.light {
     }
   }
   .header{
-    z-index: 5;
+    z-index: 3;
     position: relative;
     top: -10rem;
     left: 4rem;
